option(
    'impl',
    type : 'combo',
    choices : ['auto', 'fcontext', 'win32fiber', 'emscripten', 'ucontext', 'asyncify'],
    description : 'Which implementation to use'
)

option(
    'threadsafe',
    type : 'boolean',
    value : true,
    description : 'Whether multiple coroutines can be ran on different threads at once (needs compiler support)'
)
